add cmake project
Revise the CMakeLists.txt file and add Google Test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
         "ostream": "cpp"
-    }
+    },
+    "cmake.sourceDirectory": "/home/sheng/c++/ds-cpp/1.big-o"
 }
